Revision history for perl distribution Convos

7.11 Not Released
 - Fix not rendering all embeds as paste
 - Fix rendering user mode "q"

7.10 2022-11-01T13:41:00+0900
 - Fix not rendering embeds when raw messages is selected
 - Fix internal links in the chat are clickable #799
 - Add max-height to embedded videos #801
 - Removed max-height on public file preview #802

7.09 2022-10-30T07:58:00+0900
 - Fix listing users
 - Fix getting to "Account" form for a user
 - Change type for user "uid" to a string

7.08 2022-10-30T22:57:00+0900
 - Fix deleting data-files when deleting an uploaded file #797

7.07 2022-10-30T21:04:00+0900
 - Fix "Attach a file" link in chat input
 - Changed "+" menu in chat input to get hidden when clicking elsewhere
 - Changed static assets directory from /asset/ to /assets/
 - No need for Mojolicious::Plugin::Webpack anymore
 - Bumped Mojolicious to 9.27
 - Replaced jest with vitest
 - Replaced rollup with vite

7.06 2022-09-20T07:44:00+0900
 - Changed nick actions to only appear on click
 - Fix button loading animation
 - Fix not showing popover menu in new private conversations
 - Fix == vs === bugs

7.05 2022-09-12T12:00:00+0900
 - Api.js does not have to extend Reactive.js
 - Fix Checkbox.svelte to emit "change" events
 - Fix being able to delete files

7.04 2022-09-12T09:25:12+0900
 - Fix showing both toggle icons on small screens
 - Ignore pull requests from "renovate" in Convos::Plugin::Bot::Action::Github
 - Will not show yourself in the participants list if offline
 - Removed form store since we have two way binding

7.03 2022-09-11T10:10:59+0900
 - Changed chat input menu to be visible on big screens
 - Fix showing the same user icon in the sidebar as in the chat for CamelCaseNick
 - Fix syncing form field data on login page #753
 - Fix picking icons for nicks containing just numbers
 - Fix being able to jump from conversation to server settings in sidebar
 - Fix showing the same icon in the sidebar as in the chat